Expressions/Csharp/Generated/CsharpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g 2012-04-01 11:19:11

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


	using Expressions.Ast;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Expressions.Csharp 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
 internal  partial class CsharpParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARACTER_LITERAL", "DATETIME_LITERAL", "DECIMAL_LITERAL", "DOT", "Digits", "EscapeSequence", "Exponent", "FLOATING_POINT_LITERAL", "FloatTypeSuffix", "HEX_LITERAL", "HexDigit", "IDENTIFIER", "LETTER", "NumericTypeSuffix", "STRING_LITERAL", "TIMESPAN_LITERAL", "UnicodeEscape", "WS", "'!'", "'!='", "'%'", "'&&'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "':'", "'<'", "'<<'", "'<='", "'=='", "'>'", "'>='", "'>>'", "'?'", "'['", "']'", "'^'", "'false'", "'null'", "'true'", "'|'", "'||'", "'~'"
	};
	public const int EOF=-1;
	public const int CHARACTER_LITERAL=4;
	public const int DATETIME_LITERAL=5;
	public const int DECIMAL_LITERAL=6;
	public const int DOT=7;
	public const int Digits=8;
	public const int EscapeSequence=9;
	public const int Exponent=10;
	public const int FLOATING_POINT_LITERAL=11;
	public const int FloatTypeSuffix=12;
	public const int HEX_LITERAL=13;
	public const int HexDigit=14;
	public const int IDENTIFIER=15;
	public const int LETTER=16;
	public const int NumericTypeSuffix=17;
	public const int STRING_LITERAL=18;
	public const int TIMESPAN_LITERAL=19;
	public const int UnicodeEscape=20;
	public const int WS=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;

	public CsharpParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public CsharpParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[65+1];


		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return CsharpParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	private sealed partial class prog_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public IAstNode value;
		public prog_return(CsharpParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CsharpParser grammar);
	}

	partial void EnterRule_prog();
	partial void LeaveRule_prog();
	// $ANTLR start "prog"
	// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:31:1: prog returns [IAstNode value] : expression EOF ;
	[GrammarRule("prog")]
	private CsharpParser.prog_return prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
		CsharpParser.prog_return retval = new CsharpParser.prog_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int prog_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken EOF2 = default(CommonToken);
		CsharpParser.expression_return expression1 = default(CsharpParser.expression_return);

		CommonTree EOF2_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(31, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }

			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:32:2: ( expression EOF )
			DebugEnterAlt(1);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:32:4: expression EOF
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(32, 4);
			PushFollow(Follow._expression_in_prog104);
			expression1=expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, expression1.Tree);
			DebugLocation(32, 15);
			if (state.backtracking == 0)
			{
				 retval.value = (expression1!=null?expression1.value:default(IAstNode)); 
			}
			DebugLocation(32, 47);
			EOF2=(CommonToken)Match(input,EOF,Follow._EOF_in_prog108); if (state.failed) return retval;
			if (state.backtracking == 0) {
			EOF2_tree = (CommonTree)adaptor.Create(EOF2);
			adaptor.AddChild(root_0, EOF2_tree);
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
			if (state.backtracking > 0) { Memoize(input, 1, prog_StartIndex); }

		}
		DebugLocation(33, 1);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"

	private sealed partial class expression_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public IAstNode value;
		public expression_return(CsharpParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CsharpParser grammar);
	}

	partial void EnterRule_expression();
	partial void LeaveRule_expression();
	// $ANTLR start "expression"
	// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:35:1: expression returns [IAstNode value] : e= conditional_expression ;
	[GrammarRule("expression")]
	private CsharpParser.expression_return expression()
	{
		EnterRule_expression();
		EnterRule("expression", 2);
		TraceIn("expression", 2);
		CsharpParser.expression_return retval = new CsharpParser.expression_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int expression_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CsharpParser.conditional_expression_return e = default(CsharpParser.conditional_expression_return);

		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(35, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }

			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:36:2: (e= conditional_expression )
			DebugEnterAlt(1);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:36:4: e= conditional_expression
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(36, 5);
			PushFollow(Follow._conditional_expression_in_expression125);
			e=conditional_expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
			DebugLocation(36, 29);
			if (state.backtracking == 0)
			{
				 retval.value = (e!=null?e.value:default(IAstNode)); 
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("expression", 2);
			LeaveRule("expression", 2);
			LeaveRule_expression();
			if (state.backtracking > 0) { Memoize(input, 2, expression_StartIndex); }

		}
		DebugLocation(37, 1);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return retval;

	}
	// $ANTLR end "expression"

	private sealed partial class conditional_expression_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public IAstNode value;
		public conditional_expression_return(CsharpParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CsharpParser grammar);
	}

	partial void EnterRule_conditional_expression();
	partial void LeaveRule_conditional_expression();
	// $ANTLR start "conditional_expression"
	// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:39:1: conditional_expression returns [IAstNode value] : e= logical_or_expression ( '?' t= expression ':' l= expression )? ;
	[GrammarRule("conditional_expression")]
	private CsharpParser.conditional_expression_return conditional_expression()
	{
		EnterRule_conditional_expression();
		EnterRule("conditional_expression", 3);
		TraceIn("conditional_expression", 3);
		CsharpParser.conditional_expression_return retval = new CsharpParser.conditional_expression_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int conditional_expression_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal3 = default(CommonToken);
		CommonToken char_literal4 = default(CommonToken);
		CsharpParser.logical_or_expression_return e = default(CsharpParser.logical_or_expression_return);
		CsharpParser.expression_return t = default(CsharpParser.expression_return);
		CsharpParser.expression_return l = default(CsharpParser.expression_return);

		CommonTree char_literal3_tree = default(CommonTree);
		CommonTree char_literal4_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "conditional_expression");
		DebugLocation(39, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }

			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:40:2: (e= logical_or_expression ( '?' t= expression ':' l= expression )? )
			DebugEnterAlt(1);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:40:4: e= logical_or_expression ( '?' t= expression ':' l= expression )?
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(40, 5);
			PushFollow(Follow._logical_or_expression_in_conditional_expression144);
			e=logical_or_expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
			DebugLocation(40, 28);
			if (state.backtracking == 0)
			{
				 retval.value = (e!=null?e.value:default(IAstNode)); 
			}
			DebugLocation(41, 3);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:41:3: ( '?' t= expression ':' l= expression )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==42))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:41:5: '?' t= expression ':' l= expression
				{
				DebugLocation(41, 5);
				char_literal3=(CommonToken)Match(input,42,Follow._42_in_conditional_expression152); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal3_tree = (CommonTree)adaptor.Create(char_literal3);
				adaptor.AddChild(root_0, char_literal3_tree);
				}
				DebugLocation(41, 10);
				PushFollow(Follow._expression_in_conditional_expression156);
				t=expression();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, t.Tree);
				DebugLocation(41, 22);
				char_literal4=(CommonToken)Match(input,34,Follow._34_in_conditional_expression158); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
				adaptor.AddChild(root_0, char_literal4_tree);
				}
				DebugLocation(41, 27);
				PushFollow(Follow._expression_in_conditional_expression162);
				l=expression();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, l.Tree);
				DebugLocation(41, 39);
				if (state.backtracking == 0)
				{
					 retval.value = new Conditional((e!=null?e.value:default(IAstNode)), (t!=null?t.value:default(IAstNode)), (l!=null?l.value:default(IAstNode))); 
				}

				}
				break;

			}
			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("conditional_expression", 3);
			LeaveRule("conditional_expression", 3);
			LeaveRule_conditional_expression();
			if (state.backtracking > 0) { Memoize(input, 3, conditional_expression_StartIndex); }

		}
		DebugLocation(43, 1);
		} finally { DebugExitRule(GrammarFileName, "conditional_expression"); }
		return retval;

	}
	// $ANTLR end "conditional_expression"

	private sealed partial class logical_or_expression_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public IAstNode value;
		public logical_or_expression_return(CsharpParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CsharpParser grammar);
	}

	partial void EnterRule_logical_or_expression();
	partial void LeaveRule_logical_or_expression();
	// $ANTLR start "logical_or_expression"
	// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:45:1: logical_or_expression returns [IAstNode value] : e= logical_and_expression ( '||' e= logical_and_expression )* ;
	[GrammarRule("logical_or_expression")]
	private CsharpParser.logical_or_expression_return logical_or_expression()
	{
		EnterRule_logical_or_expression();
		EnterRule("logical_or_expression", 4);
		TraceIn("logical_or_expression", 4);
		CsharpParser.logical_or_expression_return retval = new CsharpParser.logical_or_expression_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int logical_or_expression_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken string_literal5 = default(CommonToken);
		CsharpParser.logical_and_expression_return e = default(CsharpParser.logical_and_expression_return);

		CommonTree string_literal5_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "logical_or_expression");
		DebugLocation(45, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 4)) { return retval; }

			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:46:2: (e= logical_and_expression ( '||' e= logical_and_expression )* )
			DebugEnterAlt(1);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:46:4: e= logical_and_expression ( '||' e= logical_and_expression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(46, 5);
			PushFollow(Follow._logical_and_expression_in_logical_or_expression186);
			e=logical_and_expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
			DebugLocation(46, 29);
			if (state.backtracking == 0)
			{
				 retval.value = (e!=null?e.value:default(IAstNode)); 
			}
			DebugLocation(47, 3);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:47:3: ( '||' e= logical_and_expression )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==50))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:47:5: '||' e= logical_and_expression
					{
					DebugLocation(47, 5);
					string_literal5=(CommonToken)Match(input,50,Follow._50_in_logical_or_expression194); if (state.failed) return retval;
					if (state.backtracking == 0) {
					string_literal5_tree = (CommonTree)adaptor.Create(string_literal5);
					adaptor.AddChild(root_0, string_literal5_tree);
					}
					DebugLocation(47, 11);
					PushFollow(Follow._logical_and_expression_in_logical_or_expression198);
					e=logical_and_expression();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
					DebugLocation(48, 5);
					if (state.backtracking == 0)
					{
						 retval.value = new BinaryExpression(retval.value, (e!=null?e.value:default(IAstNode)), ExpressionType.LogicalOr); 
					}

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("logical_or_expression", 4);
			LeaveRule("logical_or_expression", 4);
			LeaveRule_logical_or_expression();
			if (state.backtracking > 0) { Memoize(input, 4, logical_or_expression_StartIndex); }

		}
		DebugLocation(50, 1);
		} finally { DebugExitRule(GrammarFileName, "logical_or_expression"); }
		return retval;

	}
	// $ANTLR end "logical_or_expression"

	private sealed partial class logical_and_expression_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public IAstNode value;
		public logical_and_expression_return(CsharpParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CsharpParser grammar);
	}

	partial void EnterRule_logical_and_expression();
	partial void LeaveRule_logical_and_expression();
	// $ANTLR start "logical_and_expression"
	// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:52:1: logical_and_expression returns [IAstNode value] : e= bitwise_or_expression ( '&&' e= bitwise_or_expression )* ;
	[GrammarRule("logical_and_expression")]
	private CsharpParser.logical_and_expression_return logical_and_expression()
	{
		EnterRule_logical_and_expression();
		EnterRule("logical_and_expression", 5);
		TraceIn("logical_and_expression", 5);
		CsharpParser.logical_and_expression_return retval = new CsharpParser.logical_and_expression_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int logical_and_expression_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken string_literal6 = default(CommonToken);
		CsharpParser.bitwise_or_expression_return e = default(CsharpParser.bitwise_or_expression_return);

		CommonTree string_literal6_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "logical_and_expression");
		DebugLocation(52, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 5)) { return retval; }

			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:53:2: (e= bitwise_or_expression ( '&&' e= bitwise_or_expression )* )
			DebugEnterAlt(1);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:53:4: e= bitwise_or_expression ( '&&' e= bitwise_or_expression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(53, 5);
			PushFollow(Follow._bitwise_or_expression_in_logical_and_expression226);
			e=bitwise_or_expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
			DebugLocation(53, 28);
			if (state.backtracking == 0)
			{
				 retval.value = (e!=null?e.value:default(IAstNode)); 
			}
			DebugLocation(54, 3);
			// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:54:3: ( '&&' e= bitwise_or_expression )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==25))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Projects\\Expressions\\Expressions\\Csharp\\Csharp.g:54:5: '&&' e= bitwise_or_expression
					{
					DebugLocation(54, 5);
					string_literal6=(CommonToken)Match(input,25,Follow._25_in_logical_and_expression234); if (state.failed) return retval;
					if (state.backtracking == 0) {
					string_literal6_tree = (CommonTree)adaptor.Create(string_literal6);
					adaptor.AddChild(root_0, string_literal6_tree);
					}
					DebugLocation(54, 11);
					PushFollow(Follow._bitwise_or_expression_in_logical_and_expression238);
					e=bitwise_or_expression();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
					DebugLocation(55, 5);
					if (state.backtracking == 0)
					{
